kubernetes/apps/monitoring/network-policies/app/loki.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki
  namespace: monitoring
spec:
  description: "Loki: Receive logs from Alloy, serve queries to Grafana"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: loki
  enableDefaultDeny:
    egress: false
    ingress: false
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
