kubernetes/apps/monitoring/network-policies/app/prometheus.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus
  namespace: monitoring
spec:
  description: "Prometheus: Scrape metrics from targets, serve queries to Grafana"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  enableDefaultDeny:
    egress: false
    ingress: false
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tempo
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
            - port: "9100"
              protocol: TCP
            - port: "9153"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "9402"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "19001"
              protocol: TCP
            - port: "3000"
              protocol: TCP
            - port: "3100"
              protocol: TCP
            - port: "3200"
              protocol: TCP
            - port: "7979"
              protocol: TCP
            - port: "9093"
              protocol: TCP
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "2381"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
