kubernetes/apps/monitoring/network-policies/app/vmagent.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmagent
  namespace: monitoring
spec:
  description: "VMAgent: Scrape metrics from all targets, push to vmsingle"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmagent
  enableDefaultDeny:
    egress: false
    ingress: false
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmsingle
      toPorts:
        - ports:
            - port: "8429"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
            - port: "9100"
              protocol: TCP
            - port: "9153"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "8429"
              protocol: TCP
            - port: "9402"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "19001"
              protocol: TCP
            - port: "3000"
              protocol: TCP
            - port: "3100"
              protocol: TCP
            - port: "3200"
              protocol: TCP
            - port: "7979"
              protocol: TCP
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
