kubernetes/apps/monitoring/network-policies/app/vmsingle.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vmsingle
  namespace: monitoring
spec:
  description: "VictoriaMetrics Single: Receive metrics from vmagent, serve queries"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmsingle
  enableDefaultDeny:
    egress: false
    ingress: false
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "8429"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana
      toPorts:
        - ports:
            - port: "8429"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "8429"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
